--- a/style.css
+++ b/style.css
@@ -30,3 +30,18 @@ h1 {
 .beneficios {
    background: #white;
 }
+
+ul {
+   display: inline-block;
+   width: 20%;
+   vertical-align: top;
+   margin-right: 15%;
+}
+
+.beneficios-imagem {
+   width: 50%
+}
+
+.titulo {
+   padding-left: 20px;
+}
